[project]
name = "supply-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "dotenv>=0.9.9",
    "gliner>=0.2.24",
    "google-genai>=2.7.0",
    "langgraph>=1.2.1",
    "lxml>=6.1.1",
    "lxml-html-clean>=0.4.5",
    "newspaper3k>=0.2.8",
    "ollama>=0.6.2",
    "openai>=2.38.0",
    "pymupdf>=1.27.2.3",
    "requests>=2.33.1",
    "spacy>=3.8.14",
    "supabase>=2.30.0",
    "torch>=2.12.0",
    "transformers>=5.10.2",
]
