[project]
name = "supply-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "nltk>=3.9.4",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "supabase>=2.30.0",
]
